--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Galeria de Miniaturas</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="assets/js/script.js" defer></script>
 </head>
 <body class="bg-gray-50 flex items-center justify-center min-h-screen p-6">
 
